# srex

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
benches/: srecord.rs
py/: srex.py
src/: lib.rs  main.rs  srecord.rs
src/srecord/: data_chunk.rs  error.rs  get.rs  mod.rs  record.rs  record_type.rs  slice_index.rs  srecord_file.rs  utils.rs
tests/: srecord.rs
tests/srec_files/: data_chunks.s19  invalid_record_count.s19  multiple_start_addresses.s19  offset_data.s19  unsorted.s28  wikipedia.s37
