[package]
name = "srex"
version = "0.1.0"
authors = ["krabbstek <18243170+krabbstek@users.noreply.github.com>"]
description = "Library for managing SRecord files."
keywords = ["srec"]
license = "MIT"
repository = "https://github.com/krabbstek/srex"
edition = "2021"


[lib]
name = "srex"

[dependencies]
hex = "0.4.3"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "srecord"
harness = false
